--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@grammyjs/web-app": "^1.3.0",
     "dotenv": "^16.4.7",
     "grammy": "^1.35.1",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "nvm": "^0.0.4",
+    "punycode": "^2.3.1"
   }
 }
